<resources>
    <string name="app_name" translatable="false">MoDE</string>
    <string name="main_menu_project_new">New project</string>
    <string name="main_menu_project_open">Open project</string>
    <string name="main_menu_project_from_qr">Project from QR code</string>
    <string name="main_menu_title_return_to_code">Return to code</string>
    <string name="main_menu_title_settings">Settings</string>
    <string name="main_menu_title_search">Search</string>
    <string name="title_a">Welcome to MoDE</string>
    <string name="title_b">How to get Started</string>
    <string name="text_a">This is a Mobile Development Environment, which allows you to program on the go! Currently Java, XML, and Python are all supported!</string>
    <string name="text_b">To start using MoDE you can click the New Project, or Clone From Git button on the main menu.</string>
    <string name="start">Start</string>
    <string name="answer_save">Save</string>
    <string name="answer_cancel">Cancel</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="answer_save_continue">Save and continue</string>
    <string name="answer_save_close">Save and close</string>
    <string name="answer_discard_continue">Discard and continue</string>
    <string name="answer_discard_close">Close without saving</string>
    <string name="answer_create_project">Create project</string>
    <string name="answer_clone">Clone</string>
    <string name="answer_confirm">Confirm</string>
    <string name="answer_ok">OK</string>
    <string name="file_manager_enter_file_name">Enter File Name:</string>
    <string name="file_manager_enter_directory_name">Enter Directory Name:</string>
    <string name="file_manager_current_file_path">Current Folder: </string>
    <string name="file_manager_file_name">File Name</string>
    <string name="file_manager_directory_name">Directory Name</string>
    <string name="file_manager_language">Choose language type: </string>
    <string name="file_manager_template">Choose file template: </string>
    <string name="file_manager_dialog_delete_title">Confirmation</string>
    <string name="file_manager_dialog_delete_description">Do you want to delete this file?</string>
    <string name="file_manager_dialog_rename_title">Rename file to:</string>
    <string name="file_manager_message_file_copied">File Copied</string>
    <string name="file_manager_message_file_cut">File Cut</string>
    <plurals name="file_manager_message_all_file_pasted">
        <item quantity="one">%1$d file pasted</item>
        <item quantity="other">%1$d files pasted</item>
    </plurals>
    <plurals name="file_manager_message_partial_file_pasted">
        <item quantity="one">%1$d out of %2$d file pasted successfully</item>
        <item quantity="other">%1$d out of %2$d files pasted successfully</item>
    </plurals>
    <string name="file_manager_description_up_directory">Previous directory</string>
    <string name="file_manager_menu_refresh">Refresh</string>
    <string name="file_manager_menu_submenu">More options</string>
    <string name="file_manager_menu_create_file">Create File</string>
    <string name="file_manager_menu_create_folder">Create Folder</string>
    <string name="file_manager_action_delete">Delete</string>
    <string name="file_manager_action_rename">Rename</string>
    <string name="file_manager_action_copy">Copy</string>
    <string name="file_manager_action_cut">Cut</string>
    <string name="file_manager_action_paste">Paste</string>
    <string name="pattern_update">Update</string>
    <string name="pattern_remove">Remove</string>
    <string name="pattern_entry_correct">Welcome back!</string>
    <string name="pattern_entry_incorrect">Incorrect pattern</string>
    <string name="git">Git</string>
    <string name="git_names_branch">Branch</string>
    <string name="git_names_branch_display">Branch: %1$s</string>
    <string name="git_names_commit">Commit</string>
    <string name="git_names_select_all">Select all</string>
    <string name="git_names_deselect_all">Deselect all</string>
    <string name="git_file_status_added">Added</string>
    <string name="git_file_status_changed">Changed</string>
    <string name="git_file_status_missing">Missing</string>
    <string name="git_file_status_modified">Modified</string>
    <string name="git_file_status_removed">Removed</string>
    <string name="git_file_status_uncommitted_changes">Uncommitted Changes</string>
    <string name="git_file_status_untracked">Untracked</string>
    <string name="git_branch_type_local">Local</string>
    <string name="git_branch_type_remote">Remote</string>
    <string name="git_init">Initialise Git</string>
    <string name="git_init_message_enable">Do you want to enable Git version control?</string>
    <string name="git_commit_long">Git commit</string>
    <string name="git_commit_commit_message">Enter commit message</string>
    <string name="git_commit_commit_files">Choose files to commit</string>
    <string name="git_commit_message_successful">Commit successful</string>
    <string name="git_commit_message_failure">Unable to commit; Undefined error</string>
    <string name="git_commit_message_no_head">Unable to commit; repo doesn\'t have HEAD</string>
    <string name="git_commit_message_no_message">Unable to commit; No commit message</string>
    <string name="git_commit_message_unmerged_path">Unable to commit; Unmerged paths in index</string>
    <string name="git_commit_message_concurrent_update">Unable to commit; HEAD is currently being updated by another process</string>
    <string name="git_commit_message_wrong_state">Unable to commit; The repository is in wrong state</string>
    <string name="git_commit_message_reject_commit">Unable to commit; The commit was rejected by commit hooks</string>
    <string name="git_commit_message_no_author">Unable to commit; Author not set.</string>
    <string name="git_commit_message_no_author_title">No committer username and email set!</string>
    <string name="git_commit_message_no_author_description">Would you like to set them now?</string>
    <string name="git_commit_validation_empty_commit_message">Commit message must not be empty!</string>
    <string name="git_clone">Clone from Git</string>
    <string name="git_clone_enter_url">Enter Git URL</string>
    <string name="git_clone_enter_project_name">Enter Project name</string>
    <string name="git_clone_message_success">Project successfully cloned.</string>
    <string name="git_clone_message_error">Error occurred while trying to clone Git project.</string>
    <string name="git_clone_message_remote_not_found">Remote repository not found.</string>
    <string name="git_authentication_title">Remote Git repository requires authentication.</string>
    <string name="git_authentication_username">Remote username</string>
    <string name="git_authentication_password">Remote password</string>
    <string name="git_pull">Git Pull</string>
    <string name="git_pull_message_successful">Pull successful.</string>
    <string name="git_pull_message_failure">Pull unsuccessful.</string>
    <string name="git_push">Git Push</string>
    <string name="git_push_message_successful">Push successful.</string>
    <string name="git_push_message_failure">Push unsuccessful</string>
    <string name="git_branch_create">Create Branch</string>
    <string name="git_branch_create_title_name">Enter name for new branch</string>
    <string name="git_checkout_short">Checkout</string>
    <string name="git_checkout_long">Git Checkout</string>
    <string name="git_checkout_enter_new_branch_name">Enter name for local branch</string>
    <string name="git_checkout_message_unclean_title">You can not checkout branch with unclean state</string>
    <string name="git_checkout_message_unclean_message">Please either commit your changes or reset to HEAD</string>
    <string name="project_new_name">Enter name of the project</string>
    <string name="project_new_name_hint">Project name</string>
    <string name="project_new_type">Choose project type</string>
    <string name="project_new_main_create">Create main file</string>
    <string name="project_new_main_name">Enter main file name</string>
    <string name="project_new_error_no_name">Project must have name!</string>
    <string name="project_new_error_main_no_name">Main file must have a name</string>
    <string name="project_new_error_name_in_use">Project with this name already exists!</string>
    <string name="project_delete_title">Are you sure you want to delete this project?</string>
    <string name="project_new_default_main_name">main</string>
    <string name="ide_message_file_open_error">Unable to open file.</string>
    <string name="ide_message_file_save_error">Unable to save file.</string>
    <string name="ide_message_saving">Saving</string>
    <string name="ide_close_no_save_title">Do you want to save your changes?</string>
    <string name="ide_close_no_save_message">All unsaved changes will be lost.</string>
    <string name="ide_continue_save_title">Do you want to save your changes?</string>
    <string name="ide_continue_save_message">All unsaved changes will be lost.</string>
    <string name="ide_menu_submenu">More options</string>
    <string name="ide_menu_settings">Settings</string>
    <string name="ide_menu_file_manager">File Viewer</string>
    <string name="settings_title">Settings</string>
    <string name="settings_pattern_header">Pattern</string>
    <string name="settings_preferences_header">Preferences</string>
    <string name="settings_git_header">Git</string>
    <string name="settings_info_restart_required">You will need to restart the application for this to take an effect.</string>
    <string name="settings_git_username_title">Git Username</string>
    <string name="settings_git_email_title">Git Email</string>
    <string name="settings_pattern_title">Pattern</string>
    <string name="settings_theme_title">Light Mode</string>
    <string name="settings_git_username_summary">The committer username</string>
    <string name="settings_git_username_summary_current">The committer username: %1$s</string>
    <string name="settings_git_email_summary">Git committer email</string>
    <string name="settings_git_email_summary_current">Git committer email: %1$s</string>
    <string name="settings_pattern_summary_disabled">Add a pattern to your application</string>
    <string name="settings_theme_summary_disabled">Light Mode Disabled</string>
    <string name="settings_theme_summary_enabled">Light Mode Enabled</string>
    <string name="splash_welcome">Welcome to MoDE</string>
    <string name="splash_notice" translatable="false">COPYRIGHT © 2020 MoDE. All rights reserved.</string>
    <string name="plugin_generic_empty">Empty file</string>
    <string name="plugin_java_template_class_main">Java Class with Main method</string>
    <string name="plugin_java_template_class">Java Class</string>
    <string name="plugin_java_template_interface">Java Interface</string>
    <string name="plugin_java_template_enum">Java Enum</string>
    <string name="plugin_java_template_exception">Java Exception</string>
    <string name="plugin_python_template_empty">Empty python file</string>
    <string name="plugin_python_template_main">Python with main statement</string>
    <string name="plugin_xml_template_empty">Empty file</string>
    <string name="plugin_xml_template_website">Empty Website Template</string>
    <string name="dummy" translatable="false">Baka</string>
    <string name="plugin_cpp_main">Main method</string>
    <string name="plugin_php_class">PHP Class</string>
    <string name="plugin_php_interface">PHP Interface</string>
</resources>