<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="Search"
        android:id="@+id/search"
        android:icon="@drawable/ic_search_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:title="@string/answer_save"
        android:id="@+id/save_code"
        android:icon="@drawable/ic_save_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:title="@string/ide_menu_submenu"
        app:showAsAction="always"
        android:icon="@drawable/ic_more_vert_24dp"
        >

        <menu>
            <item
                android:title="@string/ide_menu_settings"
                android:icon="@drawable/ic_settings_24dp"
                android:id="@+id/settings_nav"
                app:showAsAction="never"/>
            <item
                android:title="@string/ide_menu_file_manager"
                android:icon="@drawable/ic_description_24dp"
                android:id="@+id/fileview_nav"
                app:showAsAction="never"/>

            <group android:id="@+id/git">
                <item android:title="@string/git_init"
                    android:id="@+id/git_init_nav"
                    app:showAsAction="never"
                    android:visible="false"/>

                <item android:title="@string/git_commit_long"
                    android:id="@+id/screen_commit_commit"
                    app:showAsAction="never"/>

                <item
                    android:id="@+id/git_pull"
                    android:title="@string/git_pull"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/git_push"
                    android:title="@string/git_push"
                    app:showAsAction="never" />

                <item android:title="@string/git"
                    android:id="@+id/git_nav"
                    app:showAsAction="never"
                    android:visible="false"/>

                <item
                    android:id="@+id/dialog_git_branch_new"
                    android:title="@string/git_branch_create"
                    app:showAsAction="never"
                    android:visible="false"/>

                <item
                    android:id="@+id/dialog_git_checkout"
                    android:title="@string/git_checkout_long"
                    app:showAsAction="never"/>
            </group>
            <!-- To extend with further navigation options like Git -->
        </menu>
    </item>

</menu>