<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:text="@string/project_new_name"
        />

    <EditText
        android:id="@+id/fragment_project_new_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/project_new_name_hint"
        android:inputType="text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_new_type"/>

    <Spinner
        android:id="@+id/fragment_project_new_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/fragment_project_new_main_make"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_new_main_create"/>

    <TextView
        android:id="@+id/fragment_project_new_main_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_new_main_name"/>

    <EditText
        android:id="@+id/fragment_project_new_main_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>