<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="6dp"
        android:text="@string/git_authentication_title"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        android:text="@string/git_authentication_username" />

    <EditText
        android:id="@+id/dialog_git_authentication_username"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/git_authentication_username"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        android:text="@string/git_authentication_password" />

    <EditText
        android:id="@+id/dialog_git_authentication_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/git_authentication_password"
        android:inputType="textPassword" />

</LinearLayout>